# src/main/java/com/example/forinterviewpracticespringbootalltopicimplementaion/controller/PaymentController.java
@@ -3,19 +3,24 @@ package com.example.forinterviewpracticespringbootalltopicimplementaion.controll
 import com.example.forinterviewpracticespringbootalltopicimplementaion.dto.CreatePaymentRequestDTO;
 import com.example.forinterviewpracticespringbootalltopicimplementaion.dto.PaymentResponseDTO;
 import com.example.forinterviewpracticespringbootalltopicimplementaion.service.PaymentService;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import static com.example.forinterviewpracticespringbootalltopicimplementaion.constants.ApiPathConstants.BASE_PATH;
+
 @RestController
-@RequestMapping("/api/payments")
+@RequestMapping(BASE_PATH)
 @RequiredArgsConstructor
+@SecurityRequirement(name = "bearerAuth")
+
 public class PaymentController {
 
     private final PaymentService paymentService;
 
     // ✅ Create Dummy Payment
-    @PostMapping
+    @PostMapping("/payments/addPayment")
     public ResponseEntity<PaymentResponseDTO> createPayment(
             @RequestBody CreatePaymentRequestDTO dto) {
 
@@ -23,7 +28,7 @@ public class PaymentController {
     }
 
     // ✅ Mark Payment Success / Failed
-    @PutMapping("/{paymentId}/status")
+    @PutMapping("/payments/{paymentId}/status")
     public ResponseEntity<String> updatePaymentStatus(
             @PathVariable Long paymentId,
             @RequestParam String status) {
